--- a/src/globals.css
+++ b/src/globals.css
@@ -22,6 +22,8 @@ body {
 }
 
 #signin-img {
+    display: flex;
+    flex: 1;
     width: 279.43px;
     height: 446px;
     margin-top: 80px;
@@ -57,6 +59,7 @@ body {
 }
 
 .signin-form {
+    flex: 1;
     width: 450px;
     height: fit-content;
     display: flex;
