--- a/src/globals.css
+++ b/src/globals.css
@@ -5,8 +5,8 @@ body {
     height: 100vh;
     width: auto;
     margin: 0;
-    overflow-y: visible;
-    overflow-x: hidden;
+    /* overflow-y: visible;
+    overflow-x: visible ; */
 }
 
 .main-screen {
@@ -23,7 +23,7 @@ body {
 
 #signin-img {
     display: flex;
-    flex: 1;
+    flex:1;
     width: 279.43px;
     height: 446px;
     margin-top: 80px;
@@ -194,6 +194,7 @@ body {
     height: 55px;
     display: flex;
     justify-content: space-between;
+    z-index: 2000;
 }
 
 .logo {
@@ -212,33 +213,42 @@ body {
     margin-top: 15px;
 }
 
+#nav-item{
+    color: white;
+    text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    margin-right: 25px;
+    margin-top: 15px;  
+}
+
 .nav-item:hover {
     color: rgba(0, 200, 166, 1);
 }
 
 .left-img {
-    /* border: 1px solid black; */
-    width: fit-content;
-    height: fit-content;
-    position: absolute;
+    border: 1px solid black;
+    width:"100px"; 
+    height:"200px";
+    /* display: flex;
     margin-right: 750px;
-    margin-top: 100px;
+    margin-top: 0px; */
 }
 
 .right-img {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: fit-content;
     height: fit-content;
-    position: absolute;
+    display: flex;
     margin-left: 750px;
-    margin-top: 125px;
+    margin-top: 0px;
 }
 
 .down-img {
-    /* border: 1px solid black; */
+    border: 1px solid black;
     width: fit-content;
     height: fit-content;
-    position: absolute;
+    display: flex;
     margin-left: 650px;
     margin-top: 275px;
 }
@@ -273,16 +283,16 @@ body {
     background-color: white;
 }
 
-.tab-content {
+/* .tab-content {
     background-color: rgba(219, 234, 254, 0.2);
     width: auto;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     position: relative;
-}
+} */
 
 .form-content {
     background-color: #fefefe;
@@ -362,3 +372,31 @@ body {
     color: black;
     text-decoration: none;
 }
+
+.profile-logo{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.profile-txt{
+    color: rgba(179, 38, 30, 1);
+}
+
+.screen-width{
+    width: 100vw;
+    height: 100vh;
+}
+
+
+.left-part{
+    width: 490px;
+    height: 489.97px;
+    display: flex;
+    flex-direction: row;
+    margin-top: 25px;
+    margin-left: 50px;
+}
+
+
+
