--- a/src/globals.css
+++ b/src/globals.css
@@ -1,286 +1,334 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 html,
 body {
-    height: 100vh;
-    width: auto;
-    margin: 0;
-    /* overflow-y: visible;
+  height: 100vh;
+  width: auto;
+  margin: 0;
+  /* overflow-y: visible;
     overflow-x: visible ; */
 }
-
+/* 
 .main-screen {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: row;
+} */
+.authPageWrapper {
+  /* width: 100vw; */
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+.authWrapper {
+  display: flex;
+  /* justify-content: space; */
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+  /* align-items:center; */
 }
 
 .left-container {
-    background-color: rgba(236, 234, 246, 1);
-    width: 50%;
-}
-
-#signin-img {
-    display: flex;
-    flex:1;
-    width: 279.43px;
-    height: 446px;
-    margin-top: 80px;
-    margin-left: 170px;
-}
-
-#auth-frame {
-    width: 175px;
-    height: 46.96px;
-    margin-right: 30px;
+  background-color: #eceaf6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding: 50px; */
+  width: 50%;
 }
 
 .right-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  width: 50%;
+  height: 100vh;
+}
+
+/* Media Query Start */
+@media (max-width: 800px) {
+  .left-container {
+    /* display: none; */
+    width: 100%;
+    height: fit-content;
+  }
+  .right-container {
+    padding: 8px;
+    width: 100%;
+  }
+  #auth-frame {
+    display: none;
+  }
+  #signin-img {
+    height: 120px;
+  }
+  .authWrapper {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    justify-content: center;
+    align-items: center;
+  }
+}
+/* Media Query End */
+
+#signin-img {
+  height: 480px;
+  /* display: flex;
+  flex: 1;
+  width: 279.43px;
+  height: 446px;
+  margin-top: 80px;
+  margin-left: 170px; */
+}
+
+#auth-frame {
+  width: 175px;
+  height: 46.96px;
+  margin-right: 30px;
 }
 
 .row1 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-top: 20px;
-    padding-right: 40px;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-top: 16px;
+  /* width: 100%; */
+  /* padding-right: 40px; */
 }
 
 .row2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .signin-form {
-    flex: 1;
-    width: 450px;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  width: 450px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 #signin-txt1 {
-    font-family: "Poppins", sans-serif;
-    width: fit-content;
-    font-size: 35px;
-    font-weight: 600;
-    color: rgba(51, 51, 102, 1);
-    margin-top: 0px;
+  font-family: "Poppins", sans-serif;
+  width: fit-content;
+  font-size: 35px;
+  font-weight: 600;
+  color: rgba(51, 51, 102, 1);
+  margin-top: 0px;
 }
 
 #signin-txt2 {
-    font-family: "Poppins", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    margin-top: -40px;
-    color: rgba(51, 51, 102, 0.7);
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  margin-top: -40px;
+  color: rgba(51, 51, 102, 0.7);
 }
 
 #btn {
-    margin-top: 20px;
-    background-color: rgba(0, 200, 166, 1);
-    height: 50px;
+  margin-top: 20px;
+  background-color: rgba(0, 200, 166, 1);
+  height: 50px;
 }
 
 #verification-txt1 {
-    font-family: "Poppins", sans-serif;
-    width: fit-content;
-    font-size: 30px;
-    font-weight: 600;
-    color: rgba(51, 51, 102, 1);
-    margin-top: 0px;
-
+  font-family: "Poppins", sans-serif;
+  width: fit-content;
+  font-size: 30px;
+  font-weight: 600;
+  color: rgba(51, 51, 102, 1);
+  margin-top: 0px;
 }
 
 #verification-txt2 {
-    font-family: "Poppins", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    margin-top: -39px;
-    color: rgba(51, 51, 102, 0.7);
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  margin-top: -39px;
+  color: rgba(51, 51, 102, 0.7);
 }
 
 .detail-container {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: 464px;
-    margin-left: 109.5px;
-    margin-right: 109.5px;
-    margin-top: 25px;
-    margin-bottom: 100px;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 464px;
+  margin-left: 109.5px;
+  margin-right: 109.5px;
+  margin-top: 25px;
+  margin-bottom: 100px;
 }
 
 #details-txt1 {
-    font-family: "Poppins", sans-serif;
-    width: fit-content;
-    font-size: 30px;
-    font-weight: 600;
-    color: rgba(51, 51, 102, 1);
-    margin-top: 0px;
+  font-family: "Poppins", sans-serif;
+  width: fit-content;
+  font-size: 30px;
+  font-weight: 600;
+  color: rgba(51, 51, 102, 1);
+  margin-top: 0px;
 }
 
 #details-txt2 {
-    font-family: "Poppins", sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    display: flex;
-    flex-direction: column;
-    margin-top: -39px;
-    color: rgba(51, 51, 102, 0.7);
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  margin-top: -39px;
+  color: rgba(51, 51, 102, 0.7);
 }
 
 .detail-card {
-    margin-top: 15px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
-    width: 100%;
-    margin-top: 0px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 15px;
+  width: 100%;
+  margin-top: 0px;
 }
 
 .txt-3 {
-    font-family: "Poppins", sans-serif;
-    margin-top: 10px;
-    width: auto;
-    color: black;
-    font-size: 11px;
-    font-weight: 500;
+  font-family: "Poppins", sans-serif;
+  margin-top: 10px;
+  width: auto;
+  color: black;
+  font-size: 11px;
+  font-weight: 500;
 }
 
 .pincode-form {
-    width: 450px;
-    height: fit-content
+  width: 450px;
+  height: fit-content;
 }
 
 #signup-img {
-    width: 400px;
-    height: 500px;
-    margin-top: 50px;
-    margin-left: 100px;
+  width: 400px;
+  height: 500px;
+  margin-top: 50px;
+  margin-left: 100px;
 }
 
 .signup-form {
-    display: flex;
-    flex-direction: column;
-    width: 400px;
-    height: fit-content;
-    margin-top: 100px;
-    margin-left: 100px;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: fit-content;
+  margin-top: 100px;
+  margin-left: 100px;
 }
 
 #btn-google {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .navbar {
-    background-color: rgba(61, 48, 162, 1);
-    padding: 0px;
-    color: white;
-    position: sticky;
-    top: 0;
-    width: 100vw;
-    height: 55px;
-    display: flex;
-    justify-content: space-between;
-    z-index: 2000;
+  background-color: rgba(61, 48, 162, 1);
+  padding: 0px;
+  color: white;
+  position: sticky;
+  top: 0;
+  width: 100vw;
+  height: 55px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 2000;
 }
 
 .logo {
-    margin-top: 10px;
-    margin-left: 20px;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 
 .nav-content {
-    display: flex;
+  display: flex;
 }
 
 .nav-item {
-    font-family: "Poppins", sans-serif;
-    cursor: pointer;
-    margin-right: 25px;
-    margin-top: 15px;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  margin-right: 25px;
+  margin-top: 15px;
 }
 
-#nav-item{
-    color: white;
-    text-decoration: none;
-    font-family: "Poppins", sans-serif;
-    cursor: pointer;
-    margin-right: 25px;
-    margin-top: 15px;  
+#nav-item {
+  color: white;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  margin-right: 25px;
+  margin-top: 15px;
 }
 
 .nav-item:hover {
-    color: rgba(0, 200, 166, 1);
+  color: rgba(0, 200, 166, 1);
 }
 
 .left-img {
-    border: 1px solid black;
-    width:"100px"; 
-    height:"200px";
-    /* display: flex;
+  border: 1px solid black;
+  width: "100px";
+  height: "200px";
+  /* display: flex;
     margin-right: 750px;
     margin-top: 0px; */
 }
 
 .right-img {
-    border: 1px solid black;
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    margin-left: 750px;
-    margin-top: 0px;
+  border: 1px solid black;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  margin-left: 750px;
+  margin-top: 0px;
 }
 
 .down-img {
-    border: 1px solid black;
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    margin-left: 650px;
-    margin-top: 275px;
+  border: 1px solid black;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  margin-left: 650px;
+  margin-top: 275px;
 }
 
 .home-tab {
-    width: 100vw;
-    height: 50px;
-    background-color: rgba(219, 234, 254, 1);
+  width: 100vw;
+  height: 50px;
+  background-color: rgba(219, 234, 254, 1);
 }
 
 .tab-list {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 #tab-event {
-    font-family: "Poppins", sans-serif;
-    font-size: medium;
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
-    border: none;
-    cursor: pointer;
-    background-color: rgba(219, 234, 254, 1);
+  font-family: "Poppins", sans-serif;
+  font-size: medium;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: rgba(219, 234, 254, 1);
 }
 
 #tab-event:focus {
-    background-color: white;
+  background-color: white;
 }
 
 /* .tab-content {
@@ -295,108 +343,104 @@ body {
 } */
 
 .form-content {
-    background-color: #fefefe;
-    width: 600px;
-    margin-top: 0px;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
+  background-color: #fefefe;
+  width: 600px;
+  margin-top: 0px;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 .form {
-    width: 500px;
-    height: fit-content;
-    margin-top: -25px;
-    margin-left: 30px;
-    display: flex;
-    flex-direction: column;
-    column-gap: 5px;
+  width: 500px;
+  height: fit-content;
+  margin-top: -25px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  column-gap: 5px;
 }
 
 .card-txt {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 75px;
-    margin-top: 10px;
-    width: 360px;
-    font-family: "Poppins", sans-serif;
-    color: rgba(51, 51, 102, 1);
-    font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 75px;
+  margin-top: 10px;
+  width: 360px;
+  font-family: "Poppins", sans-serif;
+  color: rgba(51, 51, 102, 1);
+  font-weight: 600;
 }
 
 .inp-txt {
-    font-family: "Poppins", sans-serif;
-    font-size: small;
-    font-weight: 500;
-    font-size: small;
-    margin-bottom: 3px;
-    color: rgba(51, 51, 102, 1);
+  font-family: "Poppins", sans-serif;
+  font-size: small;
+  font-weight: 500;
+  font-size: small;
+  margin-bottom: 3px;
+  color: rgba(51, 51, 102, 1);
 }
 
 #btn-start {
-    margin-top: 20px;
-    background-color: rgba(0, 200, 166, 1);
-    height: 40px;
+  margin-top: 20px;
+  background-color: rgba(0, 200, 166, 1);
+  height: 40px;
 }
 
 .modal {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
-    background-color: #fefefe;
-    padding: 20px;
-    border-radius: 5px;
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .close:hover,
 .close:focus {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
-.profile-logo{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+.profile-logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
-.profile-txt{
-    color: rgba(179, 38, 30, 1);
+.profile-txt {
+  color: rgba(179, 38, 30, 1);
 }
 
-.screen-width{
-    width: 100vw;
-    height: 100vh;
+.screen-width {
+  width: 100vw;
+  height: 100vh;
 }
 
-
-.left-part{
-    width: 490px;
-    height: 489.97px;
-    display: flex;
-    flex-direction: row;
-    margin-top: 25px;
-    margin-left: 50px;
+.left-part {
+  width: 490px;
+  height: 489.97px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 25px;
+  margin-left: 50px;
 }
-
-
-
