--- a/src/globals.css
+++ b/src/globals.css
@@ -42,15 +42,15 @@ body {
 .right-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   padding: 16px;
   width: 50%;
   height: 100vh;
 }
 
 /* Media Query Start */
-@media (max-width: 800px) {
+@media (max-width: 850px) {
   .left-container {
     /* display: none; */
     width: 100%;
