--- a/src/globals.css
+++ b/src/globals.css
@@ -8,42 +8,31 @@ body {
   overflow-y: visible;
   overflow-x: hidden;
 }
-/* 
-.main-screen {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-} */
+
 .authPageWrapper {
-  /* width: 100vw; */
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: #eceaf6;
 }
 .authWrapper {
   display: flex;
-  /* justify-content: space; */
-  height: 100vh;
-  width: 100vw;
   overflow-x: hidden;
-  /* align-items:center; */
 }
 
 .left-container {
-  background-color: #eceaf6;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding: 50px; */
   width: 50%;
 }
 
 .right-container {
+  background-color: white;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  /* justify-content: center; */
+  align-items: center;
+  justify-content: center;
   padding: 16px;
   width: 50%;
   height: 100vh;
@@ -53,7 +42,7 @@ body {
 @media (max-width: 850px) {
   .left-container {
     /* display: none; */
-    width: 100%;
+    width: auto;
     height: fit-content;
   }
   .right-container {
@@ -77,15 +66,14 @@ body {
 
 #signin-img {
   height: 480px;
-  /* display: flex;
-  flex: 1;
-  width: 279.43px;
-  height: 446px;
-  margin-top: 80px;
-  margin-left: 170px; */
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 #auth-frame {
+  margin-top: 0px;
   width: 175px;
   height: 46.96px;
   margin-right: 30px;
@@ -96,23 +84,23 @@ body {
   flex-direction: column;
   align-items: flex-end;
   padding-top: 16px;
-  /* width: 100%; */
-  /* padding-right: 40px; */
+  width: 100%;
+  padding-right: 40px;
 }
 
 .row2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
 }
 
 .signin-form {
-  flex: 1;
   width: 450px;
   height: fit-content;
   display: flex;
   flex-direction: column;
+  gap: 5px;
 }
 
 #signin-txt1 {
@@ -135,7 +123,6 @@ body {
 }
 
 #btn {
-  margin-top: 20px;
   background-color: rgba(0, 200, 166, 1);
   height: 50px;
 }
