--- a/src/globals.css
+++ b/src/globals.css
@@ -9,125 +9,141 @@ body {
   overflow-x: hidden;
 }
 
-.authPageWrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background-color: #eceaf6;
-}
-.authWrapper {
-  display: flex;
-  overflow-x: hidden;
-}
-
-.left-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-}
-
-.right-container {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 16px;
-  width: 50%;
-  height: 100vh;
-}
-
-/* Media Query Start */
-@media (max-width: 850px) {
-  .left-container {
-    /* display: none; */
-    width: auto;
-    height: fit-content;
+@media (max-width: 825px) {     /* media query for authWrapper */
+  .authWrapper {
+    flex-direction: column;
   }
+
+  .left-container,
   .right-container {
-    padding: 8px;
+    flex: none;
     width: 100%;
   }
-  #auth-frame {
-    display: none;
-  }
-  #signin-img {
-    height: 120px;
-  }
-  .authWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
 }
-/* Media Query End */
 
-#signin-img {
-  height: 480px;
+.authWrapper {              /* Auth - SignUpLayout - authWrapper */
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-#auth-frame {
-  margin-top: 0px;
-  width: 175px;
-  height: 46.96px;
-  margin-right: 30px;
-}
-
-.row1 {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  padding-top: 16px;
-  width: 100%;
-  padding-right: 40px;
-}
-
-.row2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
 }
 
-.signin-form {
-  width: 450px;
-  height: fit-content;
+.left-container {           /* Auth -SignUpLayout - left-container */
+  height: auto;
+  flex: 1;
+  background-color: #eceaf6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#signup-img {           /* Auth - SignUpLayout - signup-img */      
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  max-width: 300px;
+  max-height: 480px;
+}
+
+.right-container {          /* Auth - SignUpLayout - right-container */
+  flex: 1;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.row1 {                     /* Auth - SignUpLayout - row1 */
+  margin: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#auth-frame {           /* Auth - SignUpLayout - auth-frame */
+  max-width: 150px;
+  max-height: 150px;
+}
+
+.row2 {         /* Auth - SignUpLayout - row2  */
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.signup-form {        /* Auth - SignUpForm - SignUp - signup-form */
+  position: absolute;         
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 10px;
+  margin-right: 25px;
 }
 
-#signin-txt1 {
+@media (max-width: 768px) {     /* Media Query for row2 and signup-form */
+  .row2 {
+    flex: 1;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .signup-form {
+    width: 200px;
+    }
+}
+
+#signup-txt1 {                      /* Auth - SignUpForm - SignUp - signup-txt1 */
   font-family: "Poppins", sans-serif;
   width: fit-content;
-  font-size: 35px;
+  font-size: 30px;
   font-weight: 600;
   color: rgba(51, 51, 102, 1);
-  margin-top: 0px;
+  margin: 0px;
 }
 
-#signin-txt2 {
+#signup-txt2 {                    /* Auth - SignUpForm - SignUp - signup-txt2 */
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  margin-top: -40px;
+  margin: -15px;
+  margin-left: 5px;
   color: rgba(51, 51, 102, 0.7);
 }
 
-#btn {
+#btn {                          /* Auth - SignUpForm - SignUp - btn */
   background-color: rgba(0, 200, 166, 1);
   height: 50px;
 }
 
-#verification-txt1 {
+#verification-txt1 {            /* Auth - SignUpFrom - Verification - verification-txt1 */
+  font-family: "Poppins", sans-serif;
+  width: fit-content;
+  font-size: 25px;
+  font-weight: 600;
+  color: rgba(51, 51, 102, 1);
+  margin-top: 0px;
+}
+
+#verification-txt2 {              /* Auth - SignUpFrom - Verification - verification-txt2 */
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  margin-top: -35px;
+  color: rgba(51, 51, 102, 0.7);
+}
+
+.detail-container {           /* Auth - SignUpFrom - Details - detail-container */
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  max-width: 400px;
+  gap: 5px;
+  padding: 20px;
+}
+
+#details-txt1 {              /* Auth - SignUpFrom - Details - details-txt1 */
   font-family: "Poppins", sans-serif;
   width: fit-content;
   font-size: 30px;
@@ -136,7 +152,7 @@ body {
   margin-top: 0px;
 }
 
-#verification-txt2 {
+#details-txt2 {             /* Auth - SignUpFrom - Details - details-txt2 */
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 400;
@@ -146,37 +162,7 @@ body {
   color: rgba(51, 51, 102, 0.7);
 }
 
-.detail-container {
-  display: flex;
-  flex-direction: column;
-  width: 400px;
-  height: 464px;
-  margin-left: 109.5px;
-  margin-right: 109.5px;
-  margin-top: 25px;
-  margin-bottom: 100px;
-}
-
-#details-txt1 {
-  font-family: "Poppins", sans-serif;
-  width: fit-content;
-  font-size: 30px;
-  font-weight: 600;
-  color: rgba(51, 51, 102, 1);
-  margin-top: 0px;
-}
-
-#details-txt2 {
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  display: flex;
-  flex-direction: column;
-  margin-top: -39px;
-  color: rgba(51, 51, 102, 0.7);
-}
-
-.detail-card {
+.detail-card {              /* Auth - SignUpFrom - Details - detail-card */
   margin-top: 15px;
   display: flex;
   flex-direction: column;
@@ -185,7 +171,7 @@ body {
   margin-top: 0px;
 }
 
-.txt-3 {
+.txt-3 {                  /* Auth - SignUpFrom - Details - txt-3 */
   font-family: "Poppins", sans-serif;
   margin-top: 10px;
   width: auto;
@@ -194,30 +180,35 @@ body {
   font-weight: 500;
 }
 
+#link{                  /* Auth - SignUpFrom - Details - link */        
+  text-decoration: none;
+}
+
 .pincode-form {
-  width: 450px;
-  height: fit-content;
-}
-
-#signup-img {
-  width: 400px;
-  height: 500px;
-  margin-top: 50px;
-  margin-left: 100px;
-}
-
-.signup-form {
+  position: absolute;         /* Auth - SignUpForm - SignUp - pincode-form */
   display: flex;
   flex-direction: column;
-  width: 400px;
-  height: fit-content;
+  gap: 10px;
+  margin-right: 25px;
   margin-top: 100px;
-  margin-left: 100px;
 }
 
-#btn-google {
-  margin-top: 15px;
+#signin-img {           /* Auth - SignInLayout - signin-img */      
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  max-width: 360px;
+  max-height: 460px;
 }
+
+.signin-form {            /* Auth - SignInLayout - signin-form */
+  position: absolute;         
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-right: 25px;
+}
+
 
 .navbar {
   background-color: rgba(61, 48, 162, 1);
