modified:   package-lock.json 	modified:   package.json 	modified:   src/Root/Pages/Modal1.tsx 	modified:   src/Root/Pages/Modal2.tsx 	modified:   src/Root/Pages/NewEvent.tsx 	modified:   src/globals.css 	modified:   src/services/BEApis/EventAPIs/index.tsx 	modified:   yarn.lock

--- a/src/globals.css
+++ b/src/globals.css
@@ -459,6 +459,7 @@ img[alt="downImg"] {        /* Root - Pages - NewEvent - downimg */
   /* border: 1px solid; */
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: space-around;
   padding: 15px;
 }
@@ -487,7 +488,7 @@ img[alt="downImg"] {        /* Root - Pages - NewEvent - downimg */
 
 .error-message {
   color: red;
-  margin-top: 5px;
+  
 }
 
 .screen-width {
