--- a/src/globals.css
+++ b/src/globals.css
@@ -9,18 +9,6 @@ body {
   overflow-x: hidden;
 }
 
-@media (max-width: 825px) {     /* media query for authWrapper */
-  .authWrapper {
-    flex-direction: column;
-  }
-
-  .left-container,
-  .right-container {
-    flex: none;
-    width: 100%;
-  }
-}
-
 .authWrapper {              /* Auth - SignUpLayout - authWrapper */
   display: flex;
   height: 100vh;
@@ -35,79 +23,91 @@ body {
   align-items: center;
 }
 
+.left-Container {           /* Auth -SignInLayout - left-Container */
+  flex: 1;
+  background-color: rgba(230, 235, 255, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #signup-img {           /* Auth - SignUpLayout - signup-img */      
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
-  max-width: 300px;
-  max-height: 480px;
+  display: flex;
+  max-width: 75%;
+  max-height: 80%;
+  flex: 1,0.5,auto;
 }
 
 .right-container {          /* Auth - SignUpLayout - right-container */
   flex: 1;
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-direction: column;
 }
 
 .row1 {                     /* Auth - SignUpLayout - row1 */
-  margin: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
 #auth-frame {           /* Auth - SignUpLayout - auth-frame */
-  max-width: 150px;
-  max-height: 150px;
+  margin-right: 40px;
+  display: flex;
+  max-width: 50%;
+  max-height: 55%;
+  flex: 0.5,0.5,auto;
 }
 
 .row2 {         /* Auth - SignUpLayout - row2  */
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
+  flex: 1,1,auto;
 }
 
-.signup-form {        /* Auth - SignUpForm - SignUp - signup-form */
-  position: absolute;         
+.signup-form {         /*Auth - SignUpForm - SignUp - signup-form*/        
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin-right: 25px;
+  justify-content: center;
+  position: relative;
+  gap: 20px;
+  width: 65%;
+  height: 69%;
+  max-width: 580px; 
+  max-height: 400px;
 }
 
-@media (max-width: 768px) {     /* Media Query for row2 and signup-form */
-  .row2 {
-    flex: 1;
-    display: flex;
-    align-items: flex-start;
-  }
-
-  .signup-form {
-    width: 200px;
-    }
+.signuptxt{
+  margin-bottom: -25px;
 }
 
 #signup-txt1 {                      /* Auth - SignUpForm - SignUp - signup-txt1 */
   font-family: "Poppins", sans-serif;
-  width: fit-content;
+  margin: 0px;
   font-size: 30px;
   font-weight: 600;
   color: rgba(51, 51, 102, 1);
-  margin: 0px;
+  max-width: 100;
+  max-width: 100%;
+  text-align: start;
+  flex: 1,1,auto;
 }
 
 #signup-txt2 {                    /* Auth - SignUpForm - SignUp - signup-txt2 */
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: 400;
+  width: auto;
   display: flex;
   flex-direction: column;
-  margin: -15px;
-  margin-left: 5px;
+  margin-top: 0px;
   color: rgba(51, 51, 102, 0.7);
+  text-align: start;
+  flex: 1,1,auto;
 }
 
 #btn {                          /* Auth - SignUpForm - SignUp - btn */
@@ -117,11 +117,11 @@ body {
 
 #verification-txt1 {            /* Auth - SignUpFrom - Verification - verification-txt1 */
   font-family: "Poppins", sans-serif;
-  width: fit-content;
+  width: 100%;
   font-size: 25px;
   font-weight: 600;
   color: rgba(51, 51, 102, 1);
-  margin-top: 0px;
+  margin-bottom: -20px;
 }
 
 #verification-txt2 {              /* Auth - SignUpFrom - Verification - verification-txt2 */
@@ -130,7 +130,7 @@ body {
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  margin-top: -35px;
+  margin-bottom: -5px;
   color: rgba(51, 51, 102, 0.7);
 }
 
@@ -139,8 +139,7 @@ body {
   flex-direction: column;
   height: fit-content;
   max-width: 400px;
-  gap: 5px;
-  padding: 20px;
+  /* gap: 5px; */
 }
 
 #details-txt1 {              /* Auth - SignUpFrom - Details - details-txt1 */
@@ -194,11 +193,10 @@ body {
 }
 
 #signin-img {           /* Auth - SignInLayout - signin-img */      
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
-  max-width: 360px;
-  max-height: 460px;
+  display: flex;
+  max-width: 80%;
+  max-height: 85%;
+  flex: 1,0.5,auto;
 }
 
 .signin-form {            /* Auth - SignInLayout - signin-form */
