--- a/src/globals.css
+++ b/src/globals.css
@@ -139,7 +139,6 @@ body {
   flex-direction: column;
   height: fit-content;
   max-width: 400px;
-  /* gap: 5px; */
 }
 
 #details-txt1 {              /* Auth - SignUpFrom - Details - details-txt1 */
@@ -187,9 +186,9 @@ body {
   position: absolute;         
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  margin-right: 25px;
-  margin-top: 100px;
+  justify-content: center;
+  gap: 15px;
+  margin: 0, auto;
 }
 
 #signin-img {           /* Auth - SignInLayout - signin-img */      
