--- a/src/globals.css
+++ b/src/globals.css
@@ -283,6 +283,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  flex: 1,1,auto;
 }
 
 .modalProfile {                /* Root - Pages - TopBar - modalProfile */
@@ -296,25 +297,66 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  flex: 1,1,auto;
 }
 
 .modal-description {          /* Root - Pages - TopBar - modal-content */
   background-color: #fefefe;
-  padding: 15px;
+  padding: 25px;
   border-radius: 10px;
+  flex: 1,1,auto;
+  width: 25%;
 }
 
 .profile-description {          /* Root - Pages - TopBar - profile-description */
   background-color: #fefefe;
-  /* padding: 15px; */
   border-radius: 10px;
+  flex: 1,1,auto;
+  display: flex;
+  align-items: center;
+  max-height: 900px;
+}
+
+.close-container{               /* Root - Pages - TopBar - close-container */
+  display: flex;
+  flex-direction: column;
+  flex: 1,1,auto;
+}
+
+.profile-txt1{                  /* Root - Pages - TopBar - profile-txt1 */
+  color: rgba(51, 51, 102, 1);
+  font-family: "Poppins",sans-serif;
+  font-size: x-large;
+  font-weight: 500;
+  width: 95%;
+  margin-bottom: 0px;
+}
+
+.profile-txt2{                  /* Root - Pages - TopBar - profile-txt1 */
+  color: rgba(51, 51, 102, 1);
+  font-family: "Poppins",sans-serif;
+  font-size: medium;
+  font-weight: 350;
+  width: 95%;
+  margin-top: 0px;
+}
+
+.profile-detail {              /* Auth - SignUpFrom - Details - profile-detail */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+  width: 100%;
 }
 
 .close {                /* Root - Pages - TopBar - modal-close */
-  color: rgba(51, 51, 102, 0.7);
+  color: rgba(51, 51, 102, 1);
   float: right;
-  font-size: 30px;
+  font-size: 40px;
+  font-weight: 400;
   cursor: pointer;
+  margin-left: 50px;
+  margin-top: -13px;
 }
 
 .close:hover,
@@ -357,9 +399,10 @@ body {
 
 .profile-logo {           /* Root - Pages - TopBar - modal - profile-logo */
   display: flex;
+  align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
 }
+
 
 .profile-txt {            /* Root - Pages - TopBar - modal - profile-txt */
   color: rgba(179, 38, 30, 1);
@@ -371,6 +414,12 @@ body {
 .icon-container {          /* Root - Pages - TopBar - modal - icon-container */
   display: flex;
   color: rgba(179, 38, 30, 1);
+  width: 80%;
+  margin-left: 35px;
+}
+
+.profile-description .close{
+  border: 1px solid;
 }
 
 .home-tab {           /* Root - Pages - HomeTab - home-tab */
