--- a/src/globals.css
+++ b/src/globals.css
@@ -744,7 +744,6 @@ img[alt="downImg"] {        /* Root - Pages - NewEvent - downimg */
 
 .backArrow{
   display: flex;
-  
 }
 
 .exportHeader{
@@ -781,41 +780,53 @@ img[alt="downImg"] {        /* Root - Pages - NewEvent - downimg */
   background-color: rgba(0, 200, 166, 1); 
 }
 
-.aboutusWrapper{
+.aboutusWrapper{              /* Root - Pages - AboutUs - aboutusWrapper */
   display: flex;
   flex-direction: row;
-  height: fit-content;
-  padding: 10px;
-  margin: 15px;
   gap: 25px;
+  height: 100vh;
+  flex: 1,1,auto;
 }
 
-.leftaboutus{
+.leftaboutus{                 /* Root - Pages - AboutUs - leftaboutus */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  flex: 0,0,auto;
 }
 
-.rightaboutus{
+.rightaboutus{                  /* Root - Pages - AboutUs - rightaboutus */
   display: flex;
   flex-direction: column;
-  margin: 0px;
-  padding: 0px;
+  flex: 1;
 }
 
-.abouttxt{
+.abouttxt{                      /* Root - Pages - AboutUs - abouttxt */
   font-family: "Poppins",sans-serif;
   font-size: 40px;
   font-weight: 600;
   color: rgba(51, 51, 102, 1);
+  margin-top: 50px;
 }
 
-.aboutContent{
-  margin: 10px;
-  color: rgba(61, 48, 162, 1);
-  width: fit-content ;
+.aboutContent{                     /* Root - Pages - AboutUs - aboutContent */
+  color: rgba(51, 51, 102, 1);
+  height: 100%;
+  max-height: 100%;
+  margin-top: 25px;
   font-family: "Poppins",sans-serif;
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 15px;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.para{                          /* Root - Pages - AboutUs - para */
+  color: rgba(51, 51, 102, 1);
+  font-family: "Poppins",sans-serif;
+  font-weight: 500;
   font-size: 15px;
 }
