--- a/src/globals.css
+++ b/src/globals.css
@@ -715,10 +715,20 @@ img[alt="downImg"] {        /* Root - Pages - NewEvent - downimg */
 .listItems li{
   font-family: "Poppins",sans-serif;
   font-size: small;
-  font-weight: 300;
+  font-weight: 350px;
   display: inline-block; 
   list-style: none;
   margin-right: 0px;
+}
+
+#listIcons{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin-right: 15px;
+  padding: 10px;
 }
 
 .buttonWrapper{
