--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 html,
@@ -81,10 +85,6 @@ body {
   max-height: 400px;
 }
 
-.signuptxt{          /* Auth - SignUpForm - SignUp - signuptxt */
-  margin-bottom: -25px;
-}
-
 #signup-txt1 {                      /* Auth - SignUpForm - SignUp - signup-txt1 */
   font-family: "Poppins", sans-serif;
   margin: 0px;
@@ -121,7 +121,7 @@ body {
   font-size: 25px;
   font-weight: 600;
   color: rgba(51, 51, 102, 1);
-  margin-bottom: -20px;
+  /* margin-bottom: -20px; */
 }
 
 #verification-txt2 {              /* Auth - SignUpFrom - Verification - verification-txt2 */
