--- a/src/globals.css
+++ b/src/globals.css
@@ -156,7 +156,9 @@ body {
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  margin-top: -39px;
+  
+  /* Wrong Practice - Please Avoid */
+  /* margin-top: -39px; */ 
   color: rgba(51, 51, 102, 0.7);
 }
 
@@ -164,10 +166,10 @@ body {
   margin-top: 15px;
   display: flex;
   flex-direction: column;
-  row-gap: 15px;
+  row-gap: 12px;
   width: 100%;
   margin-top: 0px;
-  border: 1px solid;
+  /* border: 1px solid; */
 }
 
 .txt-3 {                  /* Auth - SignUpFrom - Details - txt-3 */
