--- a/src/globals.css
+++ b/src/globals.css
@@ -338,10 +338,10 @@ body {
 .modal-description {
   /* Root - Pages - TopBar - modal-content */
   background-color: #fefefe;
-  padding: 25px;
-  border-radius: 10px;
+  padding: 24px;
+  border-radius: 8px;
   flex: 1, 1, auto;
-  width: 25%;
+  /* width: 25%; */
 }
 
 .profile-description {
@@ -439,7 +439,7 @@ h4 {
 .modal-description .MuiAutocomplete-root,     /* Root - Pages - TopBar - modal - Textfields */
 .modal-description .MuiTextField-root {
   margin-bottom: 10px;
-  width: calc(100% - 15px);
+  width: calc(100% - 16px);
 }
 
 .helper-text {
@@ -586,7 +586,6 @@ img[alt="downImg"] {
   font-size: 15px;
   font-weight: 575px;
   color: rgba(51, 51, 102, 1);
-  
 }
 
 #btn-start {
@@ -603,17 +602,6 @@ img[alt="downImg"] {
   height: fit-content;
   gap: 15px;
   width: auto;
-}
-
-.h1txt {
-  /* Root - Pages - Modal1 - h1txt */
-  display: flex;
-  font-family: "Poppins", sans-serif;
-  font-size: medium;
-  font-weight: 500;
-  color: rgba(51, 51, 102, 1);
-  justify-content: center;
-  align-items: center;
 }
 
 .Buttons {
@@ -654,19 +642,20 @@ Typography {
   align-items: center;
   flex-direction: column;
   justify-content: space-around;
-  padding: 15px;
+  gap: 16px;
+  /* padding: 15px; */
 }
 
 .pin-dashes {
   /* border: 1px solid; */
   display: flex;
-  gap: 25px;
-  margin-bottom: 15px;
+  gap: 32px;
+  /* margin-bottom: 16px; */
 }
 
 .dash {
   width: auto;
-  margin-bottom: 15px;
+  /* margin-bottom: 15px; */
   padding: 15px;
   border-bottom: 1.5px solid black;
   display: flex;
