--- a/src/globals.css
+++ b/src/globals.css
@@ -556,14 +556,8 @@ img[alt="downImg"] {
   /* Root - Pages - NewEvent - newEventForm */
   background-color: #fefefe;
   /* width: 515px; */
-  min-width: 300px;
   margin-left: 150px;
   padding: 16px 32px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
 }
 
 .card-txt {
@@ -794,8 +788,8 @@ Typography {
 }
 
 .buttonWrapper {
-  margin-right: 125px;
-  width: 20px;
+  /* margin-right: 125px; */
+  /* width: 20px; */
   height: max-content;
 }
 
